src/main/java/egovframework/example/admin/sidebar/member/error/exception/MemberRegisterException.java
package egovframework.example.admin.sidebar.member.error.exception;

public class MemberRegisterException extends RuntimeException{
	
}
